--- a/update/news.txt
+++ b/update/news.txt
@@ -1,9 +1,10 @@
-##9 Latest client version: ##6ManaPlus 1.6.7.2
-##0 Actual Release: ##1Beta3-H1
+##9 Latest client version: ##6ManaPlus 1.8.9.1
+##0 Actual Release: ##1Beta3-H2
 ##0 Welcome to ##BEvol Online##b!
 ##0 You can find every ##1rules##0 of ##BEvol Online##b here:
 ##1 [@@http://www.evolonline.org/guide_rules.html|http://www.evolonline.org/guide_rules.html@@]
 
+##7 Update from master branch
 
 ##7 ##BThe adventure begins!##b
 
