Scratch news.txt with some random babbling and correct links. It should look better than suggesting lacks of updates since 2016, tbh.

--- a/update/news.txt
+++ b/update/news.txt
@@ -1,324 +1,30 @@
-##9 Latest client version: ##6ManaPlus 1.8.9.1
-##0 Actual Release: ##1Beta3-H2
-##0 Welcome to ##BEvol Online##b!
-##0 You can find every ##1rules##0 of ##BEvol Online##b here:
-##1 [@@http://www.evolonline.org/guide_rules.html|http://www.evolonline.org/guide_rules.html@@]
+##0 Actual Release: ##1Unreleased
+##0 Welcome to ##BThe Mana World##b!
+##0 You can find every ##1rules##0 of ##BThe Mana World: rEvolt##b here:
+##1 [@@https://wiki.themanaworld.org/index.php/Game_Rules|https://wiki.themanaworld.org/index.php/Game_Rules@@]
 
 ##7 Update from master branch
 
-##7 ##BThe adventure begins!##b
+##7 ##BThere is no release title yet##b
 
-##7 Season 2, Episode 1!
+##7 Insert here version number
 
-##0 The long awaited Aurora1 release is finally online.
-##0 You can now fully explore Artis, the principale port city of Aurora,
-##0 and benefit of the latest fishing and digging support!
+##0 I wish I could show you the news, but it is too troublesome updating
+##0 this file every time we add something new to the game.
+##0 So why don't you explore around, and find out all exciting things
+##0 we already add? Please report every bug you find, as well.
 
-##0 A lot of quests will help you to explore the city and will show off
-##0 the historical and political aspect of the Archipelagos of Andorra.
-
-##0 Welcome our new support, such as walking NPCs, pets, and various
-##0 interactive map elements!
+##0 We would also like to show you our bright new ##BWallpaper##b.
+##0 Thanks for testing in advance, we'll add something more serious
+##0 to this file at release date.
 
 ##0 Have fun, the adventure starts now!
 
-##9 -- Crocs, Reid
-##9 February 2016
+##9 -- Crocs, Author Name
+##9 Insert here date
 
-
-##7 Hallowe'en Event
-
-##0 Our special Hallowe'en update is out!
-
-##0 This event brings back some old monsters from the beta releases, but
-##0 it also introduces an angry bat monster named "Crafty".
-##0 We have also reworked many graphics and music from the previous
-##0 Hallowe'en theme with the help of Aeonchild and Eric Matyas.
-
-##0 The event will stay online for 3 weeks, it should be enough time to
-##0 re-visit the island and, who knows... Maybe you'll find a new
-##0 place to explore... ;)
-
-##0 We all wish you a happy Hallowe'en and we hope to see you around!
-
-##9 -- Cheers, Reid and WildX
-##9 October 2015
-
-
-##7 Season 1, Episode 4
-
-##0 The Evol Online Project is pleased to announce you the release of
-##0 the new server software!
-##0 First of all, remember to update your server list.
-
-##0 This server includes better support for all the main features of
-##0 Evol. You won't actually see much difference from other Beta
-##0 releases, but we still need your help to assure that the current
-##0 server build works with our little world while we work on the first
-##0 release.
-
-##0 we will also release most of our current changes on the island and
-##0 some bug fixes which were waiting in queue since the end of the Beta
-##0 Session.
-##0 And yet much more work in progress which should be soon available
-##0 through the Aurora1 release this year!
-
-##9 -- Cheers, Reid and WildX
-##9 March 2015
-
-
-##7 Season 1, Episode 3!
-
-##0 Greetings to you all, fellow players! Welcome to this new version of
-##0 Evol Online! This third Beta release will maybe be followed by a
-##0 Beta3.1 if bugs are to be discovered, so don't hesitate to tell us
-##0 about anything you dislike in game. Then you may deserve a cookie...
-
-##0 Thanks to Kenny690, we made great progress on sound effects and more
-##0 will come! We also worked very hard on art, we for example added a
-##0 a new hairstyle, weapons are now visible, lots of icons were remade,
-##0 etc... Furthermore, new unit names got introduced such as Esperin
-##0 for the in-game currency or Florin as weight value. 
-
-##0 Last but not least, we did an incredible work on balancing the game,
-##0 this took us most of our time thus we think it'll bring a new game
-##0 experience to this adventure. We hope you'll enjoy this new version
-##0 of Evol Online, and remember, cookies are a source of life.
-
-##9 -- Regards, Alige.
-##9 July 2013
-
-
-##7 Get ready for summer!
-
-##0 Fellow players, we are pleased to inform you that during this year,
-##0 all of us worked hard on this project and also in real life, thus
-##0 most of our developers and contributors graduated! Congratulations
-##0 to all of them!
-
-##0 The change of license from GPLv2 to CC BY-SA 3.0 has made great
-##0 progress too! There are very few graphics left that are still GPLv2
-##0 and we're doing our best to get rid of these as soon as possible.
-
-##0 On top of that, we also continued working on our new website, we
-##0 hope you'll enjoy it as much as we do. Don't forget to register on
-##0 our forums too!
-
-##0 The Beta3 is coming very soon, so if you want a very special cookie,
-##0 please come and help us translate the last few sentences left.
-
-##0 On the ManaPlus development side, we are proud to announce the
-##0 release of that client on Debian and Ubuntu 13.10. Note that
-##0 http://manaplus.org/ is finally out too!
-
-##9 -- Regards, Alige.
-##9 June 2013
-
-
-##7 Spring time everybody!
-
-##0 Beta2.1 was a great success, more than what we thought it would be.
-##0 We are proud of this release and of the players too! Your bug
-##0 reports helped us a lot, as well as your feedbacks. Thank you!
-
-##0 We started working on Beta3 even before the launch of Beta2.1
-##0 because much needs to be done. We fixed all known in-game issues
-##0 and improved a lot of old content.
-
-##0 To sump up, Beta3 can be compared as a full balancing release, it'll
-##0 bring new weight and currency measures, which will offer a new game
-##0 experience to you all! We'll let you discover all of the other new
-##0 features and modifications by yourself!
-
-##0 Lastly, we think it is important for you to know that we spend a lot
-##0 of time trying to change our game art's license from GPLv2 to
-##0 CC BY-SA 3.0. This will help us develop much faster in the future.
-
-##0 Beta3 will soon be released, such as its news post!
-
-##9 -- Cheers, Reid.
-##9 March 2013
-
-
-##7 Finally, Beta2.1 is out!
-
-##0 We are proud to announce the launch of Beta2.1 tonight. This
-##0 update brings a lot of bug fixes. We also did a lot of dialogues and
-##0 quest fixes. Translators greatly helped too! Thanks to everyone
-##0 who contributed.
-
-##0 As Evol developers already started working on future releases,
-##0 some improvements, that were not supposed to come in so soon, were
-##0 implemented in this release. We improved and added graphics,
-##0 cleaned databases, added a new indoor sunlight effect. We hope
-##0 you'll like it!
-
-##0 ManaPlus also got improved along with its awesome new Jewelry
-##0 Theme! You can now play Evol Online on Android and Mac OS X,
-##0 enjoy! Special thanks to Socapex for his wonderful work, creating
-##0 the ManaPlus Mac OS X application.
-
-##0 Check out our Facebook and Google+ pages regularly so that you
-##0 don't miss anything. Note that we're already working on the Beta3
-##0 and Aurora1 releases, meaning which releases will come much sooner
-##0 than you think!
-
-##9 -- Regards, Alige.
-##9 February 2013
-
-
-##7 End of the World, Epic Fail!
-
-##0 We just released Beta2 and we hope you enjoyed all of the cool new
-##0 features it brang! This took us a lot of time to put in place but
-##0 sadly, we will soon need to release a small update to fix several
-##0 bugs.
-
-##0 Some of us also started working on future releases, that is why
-##0 this bug fixing release, called Beta2.1, will be release in a
-##0 month. In addition, we need to let translators do their job, and
-##0 that takes time!
-
-##0 Moreover, ManaPlus never stops getting better, as well as the
-##0 brand new Jewelry Theme, thanks to 4144 and Hal9000! Check it out!
-
-##0 Stay tuned for the Beta2.1 release!
-
-##9 -- Regards, Alige.
-##9 January 2013
-
-
-##7 Season 1, Episode 2!
-
-##0 After over 10 months of intense work, here is the new version of
-##0 Evol Online! A whole new dynamic has been added to the game,
-##0 everything has been rewritten, rethought and redrew.
-##0 We are proud to present you this Beta2 release!
-
-##0 Along with the story comes new game and client features, and new
-##0 interactions with the environment. This is in fact an entirely new
-##0 gaming experience.
-
-##0 Developers modified the whole game and here are some major
-##0 additions: savepoints, quest window, maps, graphics, etc...
-
-##0 You can check the full list of changes at
-##0 http://wiki.evolonline.org/changelog
-##0 And all of the new contributors at
-##0 http://wiki.evolonline.org/contributors
-
-##0 Enough said, check out everything by yourself!
-
-##9 -- Regards, Alige.
-##9 December 2012
-
-
-##7 What a scary... I mean... weird development team!
-
-##0 Hey, why did the ship stop?! Was that under Nard's orders? Lets
-##0 find out! Oh no, giant pumpkins overran all of the boat! It seems
-##0 you must get ready for battle. You can sense something very
-##0 powerful and evil at the far bottom of the ship. You should check
-##0 it out. Maybe Bachus, the party spirit, could help you throughout
-##0 this. We hope you'll enjoy this Halloween event.
-
-##0 Once again, Evol Online developers are in a rush. Beta2 takes a
-##0 whole lot longer than they thought but this is of course to avoid
-##0 any kind of issue. Again, a numerous amount of bugs were fixed and
-##0 scripts were mostly all rewritten for a better game experience.
-
-##0 As a lot of dialogues were added and improved for Beta2,
-##0 translations are needed more than ever. Even though some developers
-##0 also work on these, they cannot afford working on all of them.
-
-##0 If you feel like you can help developers in any way, especially for
-##0 translations if you speak english fluently, feel free to contact
-##0 them using Evol Online's IRC developer channel.
-
-##9 -- Regards, Alige.
-##9 November 2012
-
-
-##7 End of summer, beginning of Beta2!
-
-##0 Summer holidays are now over for the Evol Online developers. We are
-##0 proud to announce the arrival of Beta2 soon, even though we
-##0 unfortunately find ourselves currently behind schedule.
-
-##0 However, a lot of efforts were made to create a lot of new content
-##0 and great new tilesets which took for ever to create and fix.
-##0 We are currently fixing bugs and preparing the release. Final
-##0 modifications are being made to give you the best release ever made
-##0 for this project.
-
-##0 Among the new features is a Quest Window that has been added to the
-##0 client. It will help you see your progress in game.
-
-##0 When the Beta2 release will be out, we would like you to promote it
-##0 by simply spreading the word around you. Players will then be aware
-##0 of the news and this may help us expand our community.
-
-##0 As you already now, new contributors are always welcome!
-##0 Translators, artists and even writers are free to contact us for
-##0  more information.
-
-##9 -- Regards, Alige.
-##9 August 2012
-
-
-##7 Some people just never stop working!
-
-##0 Once more, a lot of work has been done, recently on the consistency
-##0 and quality of the game. A lot of new graphics will be part of the
-##0 next release, Beta2. Interactivity between the player and the game
-##0 was our main goal the past weeks.
-
-##0 This new dynamic and gaming experience will be revealed throughout
-##0 animations full of mysteries. Treasure chests, coconuts and new
-##0 have appeared on a brand new map!
-
-##0 The work on the translations, the repository reorganizations and
-##0 on top of all, the client, were one of our main concerns lately.
-##0 The developers still need a bit of time in order to finish this
-##0 release, thus we thank you for waiting.
-
-##9 -- Regards, Alige.
-##9 July 2012
-
-
-##7 Season 1, Episode 1!
-
-##0 After a mysterious past, you find yourself adrift on the waves in
-##0 the middle of Oceania. A noble-minded crew, sails by your body
-##0 decides to rescue and take care of you.
-
-##0 You now wake up about seven days later in their wooden ship.
-##0 Take some time to know the crew who saved you and try to
-##0 discover what happened to you before this terrible event!
-
-##9 -- Cheers, Reid.
-##9 January 2012
-
-
-##7 Evol Online Beta releases!
-
-##0 After several months of work, the world of ##BEvol Online##b is
-##0 finally opened to everyone for its first Beta release!
-
-##0 This Beta will be the first among two other ones which will help
-##0 the developers finding out the qualities and problems of the
-##0 chosen gameplay.
-
-##0 We welcome you to give us your thoughts about this, but we also
-##0 hope you will have fun being part of this amazing adventure.
-
-##0 We also need to warn you that at the end of the third release,
-##0 all characters will be wiped out as we are trying to have a
-##0 perfect balance for this game and start it over with it.
-##0 We kindly ask you to accept this.
-
-##9 -- Cheers, Reid.
-##9 January 2012
-
-##0 You can check out this page for older news entries:
+##0 You can check out this page for Evol Online news entries:
 ##1 [@@http://wiki.evolonline.org/news|http://wiki.evolonline.org/news@@]
+
+##0 You can check out this page for The Mana World Legacy news entries:
+##1 [@@https://www.themanaworld.org/news|https://www.themanaworld.org/news@@]
